--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "^5.4.5",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
