--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.7"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
