--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
+    "@types/react-icons": "^2.2.7",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
